assets/css/stylestuff.css
*,
*::before,
*::after{
  box-sizing: border-box;
}

/* Local Font */

/* @font-face {
  font-family: "FFF-Forward";
  src:url("../ttf/FFFFORWA.TTF");
} */

/* Custom Props */

:root {
  --ff-primary: 'Roboto', sans-serif;
  --ff-secondary: 'Roboto', monospace;
  /* --ff-primary: 'JetBrains Mono', monospace; */
  /* --ff-secondary: 'JetBrains Mono', monospace; */

  --fw-reg: 300;
  --fw-bold: 900;
  /* --fw-reg: 200; */
  /* --fw-bold: 600; */

  --clr-light: #fff;
  --clr-dark: #1c1c1c;
  --clr-accent: #a016e0;

  --fs-h1: 3rem;
  --fs-h2: 2.25rem;
  --fs-h3: 1.25rem;
  --fs-body: 1rem;

  --bs: 0.25em 0.25em 0.75em rgba(0,0,0,0.25), 0.125em 0.125em 0.25em rgba(0,0,0, 0.15);
  --imgs: 0.5em 0.5em 1em rgba(0,0,0,0.5)
}

@media( min-width: 800px ) {
  :root {
    --fs-h1: 4.5rem;
    --fs-h2: 3.75rem;
    --fs-h3: 1.5rem;
    --fs-body: 1.125rem;
  }
}

/* Styles */

body {
  background: var(--clr-dark);
  color: var(--clr-light);
  margin: 0;
  font-family: var(--ff-primary);
  font-size: var(--fs-body);
  font-weight: var(--fw-reg);
}

section {
  padding: 2em 5em 2em;
}

img {
  display: block;
  max-width: 100%;
}

.pixel_img {
  image-rendering: pixelated;
}

strong {
  font-weight: var(--fw-bold);
}

a { text-decoration: none; color: var(--clr-light) }
a:visited { text-decoration: none; color: var(--clr-light) }
a:hover { text-decoration: none; color: var(--clr-accent) }
a:focus { text-decoration: none; outline: none; color: var(--clr-light) }
a:active { text-decoration: none; color: var(--clr-light) }

:focus {
  outline: 3px solid var(--clr-accent);
  outline-offset: 3px;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #3c3c3c;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--clr-accent);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: hsl(281, 100%, 32%);
}

/* Button Styles */

.btn {
  display: inline-block;
  padding: 0.5em 1.5em;
  border-style: none;

  background: var(--clr-accent);
  color: var(--clr-light);

  text-transform: uppercase;
  text-decoration: none;
  font-size: .8rem;
  font-weight: var(--fw-bold);
  letter-spacing: 2px;

  margin-left: 1em;
  margin-right: 1em;

  cursor: pointer;
  transition: transform 200ms ease-in-out;

  user-select: none;
  -webkit-user-select: none;
}

.btn:hover {
  transform: scale(1.1)
}

.button__group
{
  /* background-color: #a016e0; */
}

/* Typography [This took way to long to spell] */

h1,
h2,
h3 {
  line-height: 1;
  margin: 0;
}

h1 { font-size: var(--fs-h1); }
h2 { font-size: var(--fs-h2); }
h3 { font-size: var(--fs-h3); }

.section__title {
  margin-bottom: .25em;
}

.section__title--intro {
  font-weight: var(--fw-reg);
}

.section__title--intro strong {
  display: block;
}

.section__subtitle {
  margin: 0;
  font-size: var(--fs-h3);
}

.section__subtitle--intro{
  background-color: var(--clr-accent);
  padding: .25em 1em;
  font-family: var(--ff-secondary);
  text-align: center;
  margin-bottom: 1em;
  clip-path: inset(0px 0px 0px 25%);
}
.section__subtitle--about {
  background-color: var(--clr-accent);
  padding: .25em 1em;
  font-family: var(--ff-secondary);
  text-align: center;
  margin-bottom: 1em;
}

/* Header */

nav {display: none;}

/* Introduction Style */

.intro {
  position: relative;
}

/* .intro__img {
  box-shadow: var(--bs);
} */

.intro__img.profilepic {
  filter: drop-shadow(var(--imgs));
}

/* .intro__img.real: */

.intro__img.real {
  box-shadow: var(--bs);
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
  -moz-transition: opacity 0.5s ease-in-out;
  -webkit-transition: opacity 0.5s ease-in-out;
}

.intro__img:hover.real {
  opacity: 1;
  transition: opacity 0.5s ease-in-out;
  -moz-transition: opacity 0.5s ease-in-out;
  -webkit-transition: opacity 0.5s ease-in-out;
}

@media( min-width: 600px ) {
  .intro {
    display: grid;
    width: min-content;
    margin: 0 auto;
    grid-column-gap: 1em;
    grid-template-areas:
      "img title"
      "img subtitle";
    grid-template-columns: min-content max-content;
  }

  .intro__img {
    grid-area: img;
    min-width: 256px;
    position: relative;
    z-index: 2;
  }

  .section__subtitle--intro {
    align-self: start;
    grid-column: -1 / 1;
    grid-row: 2;
    text-align: right;
    position: relative;
    left: -2em;
    width: calc(100% + 2em);
  }
}

/* About me Style */

.about-me {
  padding: .25em 25%;
}

.about-me__body p {
  margin: .5em 0;
}

/* My Socials Style */

.my-socials {
  background-color: var(--clr-dark);
  color: var(--clr-light);
  align-content: center;
  text-align: center;
  text-decoration: none;
}

/* My Projects Style */

.my-projects {
  background-color: var(--clr-dark);
  /* background-image: url(../img/mybrand-logo.png); */
  /* background-size: cover; */
  /* background-blend-mode: multiply; */
  color: var(--clr-light);
  text-align: center;
}

.highlight_projects {
  position: relative;
  display: inline-grid;
  grid-template-columns: auto auto auto;
}

.highlight_project {
  position:relative;

  background-size: 125%;
  background-position: 50%;

  border-radius: 10px;

  background-size: 100%;
  outline: 3px solid var(--clr-accent);

  min-width: 200px;
  max-width: 500px;
  min-height: 175px;

  vertical-align: middle;
  margin: 1em;
  padding: 35px 15px;

  transition: background-size .3s
  /* margin: 0 auto; */
  /* z-index:2; */
}

.highlight_project:hover {
  background-size: 120%;
}

.highlight_preview {
  text-align: center;
  /* clip-path: inset(50px); */
  z-index: -1;
}

@media( min-width: 800px ) {
  /* .my-projects {
    display: block;
    max-width: 1000px;
    margin: 0 auto;
  } */

  .service + .service {
    margin-left: 2em;
  }
}

.section__title--socials {
  color: var(--clr-accent);
  position: relative;
}

.section__title--projects {
  color: var(--clr-accent);
  position: relative;
}

.smollUnderline::after {
  content: '';
  display: block;
  width: 35em;
  height: 2px;
  margin: 0.5em auto 1em;
  background: var(--clr-light);
  opacity: 0.25;
}

/* .section__title--projects::after {
  content: '';
  display: block;
  width: 10em;
  height: 1px;
  margin: 0.5em auto 1em;
  background: var(--clr-light);
  opacity: 0.25;
} */

.socials {
  /* display: flex; */
  position: relative;
  justify-content: center;
  vertical-align: auto;
  padding: 20px 0px;
  /* width:  10em; */
  scale: 1.5;
  margin: auto;
}

.socials > .link-btns {
  font-size: 30px;
}

.socials > .discord-username {
  padding-top: 5px;
  font-size: 15px;
  margin: 0%;
}

.socials::before {
  position: relative;
  transform: translate(-15px);
  content: '';
  display: block;
  width: 2px;
  background: var(--clr-light);
  opacity: 0.25;
}

.socials > * {
  padding: 0px 5px;
}

.projects {
  display: grid;
  place-items: center;
  place-content: center;
  grid-template-columns: repeat(3, 400px/*1fr*/);
  grid-gap: 1.5em 1em;
  grid-auto-rows: minmax(200px, auto);
  justify-content: center;
  align-content: center;
  align-items: center;
}

.project {
  min-width: 400px;
  max-width: 500px;
  margin: 0 auto;
}

.project__title {
  text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.project__desc {
  text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

@media( max-width: 1300px) {
  .projects {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 1.5em 1em;
    grid-auto-rows: minmax(100px, auto);
    justify-content: center;
    align-content: center;
  }
}

@media( max-width: 800px) {
  .projects {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 3em 0px;
    grid-auto-rows: minmax(100px, auto);
    justify-content: center;
    align-content: center;
  }
}

/* Footer */

.footer_email {
  display: block;
  text-align: center;
  margin: 0 auto;
}


/* Because funny right ? :P */

.mobile-support {
  opacity: 0;
}

@media(max-width: 599px) {

  body > *:not(.mobile-support) {
    display:none;
    opacity: 0;
  }
  .mobile-support {
    opacity: 1;
  }
}

